[package]
name = "rspong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["sync"]}
futures-core = "0.3.30"
futures-util = { version = "0.3.30" }
serde = { version = "1.0.197", features = ["derive"]}
minijinja = {version = "2.0.1"}
